# proxy-vm-wizard

./: .gitignore  APT_REPOSITORY.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FLATHUB_READY.txt  FLATHUB_SUBMISSION.md  LICENSE  Makefile  README.md  RELEASE_PLAN_v0.2.7.md  SECURITY.md  enable-github-pages.sh  index.html  proxy-vm-wizard.sh  release-0.2.1.sh  release-auto.sh  release.sh  setup-proxy-template.sh  update-apt-repo.sh
.github/workflows/: ci.yml  release.yml  update-apt-repo.yml.disabled
assets/: io.github.proxyvmwizard.ProxyVmWizard.desktop  io.github.proxyvmwizard.ProxyVmWizard.metainfo.xml
core/: Cargo.toml
core/src/: auth.rs  config.rs  error.rs  lib.rs  libvirt.rs  model.rs  proxy_config.rs  vpn_config.rs
dists/stable/: Release
dists/stable/main/binary-amd64/: Packages
docs/: ARCHITECTURE.md  TEMPLATES.md  TROUBLESHOOTING.md  USER_GUIDE.md
flatpak/: flathub.json  io.github.proxyvmwizard.ProxyVmWizard.yml
packaging/: PKGBUILD  rpm.spec
pool/main/: proxy-vm-wizard_0.2.0-1_amd64.deb  proxy-vm-wizard_0.2.6-1_amd64.deb  proxy-vm-wizard_0.2.7-1_amd64.deb
scripts/: install.sh  quick-install.sh  setup-apt-repo.sh  setup-proxy-template.sh  uninstall.sh
ui/: Cargo.toml
ui/src/: app.rs  main.rs
ui/src/views/: dashboard.rs  logs.rs  mod.rs  settings.rs  templates.rs  wizard.rs
