[workspace]
members = ["core", "ui"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Proxy VM Wizard Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

