[package]
name = "proxy-vm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Proxy VM Wizard - domain model, config, and libvirt integration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

